# shader-translation-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  default.nix
.github/workflows/: ci.yml
corpus/spirv/: dota-393.spv  rend3-opaque-frag.spv  veloren-lod-terrain-frag.spv  veloren-particle-vert.spv
corpus/wgsl/: boids.wgsl  vangers-ray.wgsl
ffi/naga/: Cargo.toml  naga.h
ffi/naga/src/: lib.rs
ffi/tint/: CMakeLists.txt
ffi/tint/src/: lib.cc  tint_ffi.h
naga-ffi/: Cargo.toml  naga.h
naga-ffi/src/: lib.rs
src/: main.c
visual/: Cargo.toml
visual/src/: main.rs
